--- a/custom/mysql57/aports/APKBUILD
+++ b/custom/mysql57/aports/APKBUILD
@@ -11,7 +11,7 @@ pkggroups="mysql"
 arch="x86_64 aarch64"
 license="GPL"
 _boost_ver=1.59.0
-makedepends="bison cmake linux-headers libaio-dev ncurses-dev openssl-dev zlib-dev ncurses-static openssl-libs-static zlib-static"
+makedepends="bison cmake linux-headers libaio-dev ninja ncurses-dev openssl-dev zlib-dev ncurses-static openssl-libs-static zlib-static"
 source="https://dev.mysql.com/get/Downloads/MySQL-5.7/$_pkgname-$pkgver.tar.gz
 	https://archives.boost.io/release/$_boost_ver/source/boost_${_boost_ver//./_}.tar.gz
 	strerror.patch
@@ -29,6 +29,7 @@ build() {
 		-DBUILD_CONFIG=mysql_release \
 		-DCMAKE_BUILD_TYPE=RelWithDebInfo \
 		-DCMAKE_INSTALL_PREFIX=/usr \
+		-DCMAKE_POLICY_VERSION_MINIMUM=3.5 \
 		-DCOMPILATION_COMMENT="Alpine Linux" \
 		-DSYSCONFDIR=/etc/mysql \
 		-DMYSQL_DATADIR=/var/lib/mysql \
