--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,52 +3,73 @@ name: release
 on:
   push:
     tags: ["v*"]
-
+  workflow_dispatch:
+env:
+  ALPINE_VERSION: 3.23
 jobs:
   build-binaries:
-    runs-on: ${{ matrix.runner.label }}
     strategy:
+      fail-fast: false
       matrix:
+        arch: ["i386","amd64","arm32v7","arm64"]
         runner:
-          - { arch: amd64, label: ubuntu-24.04 }
-          - { arch: arm64, label: ubuntu-24.04-arm }
+          - ubuntu-24.04
+          - ubuntu-24.04-arm
+        exclude:
+          - arch: amd64
+            runner: ubuntu-24.04-arm
+          - arch: i386
+            runner: ubuntu-24.04-arm
+          - arch: arm64
+            runner: ubuntu-24.04
+          - arch: arm32v7
+            runner: ubuntu-24.04
+    runs-on: ${{ matrix.runner }}
     steps:
-      - uses: actions/checkout@v4
-
-      - run: docker build -o=dist community/fio
-      - run: docker build -o=dist community/libqrencode
-      - run: docker build -o=dist community/redis
-      - run: docker build -o=dist main/7zip
-      - run: docker build -o=dist main/curl
-      - run: docker build -o=dist main/htop
-      - run: docker build -o=dist main/iperf3
-      - run: docker build -o=dist main/iproute2
-      - run: docker build -o=dist main/lsof
-      - run: docker build -o=dist main/mariadb
-      - run: docker build -o=dist main/nano
-      - run: docker build -o=dist main/netcat-openbsd
-      - run: docker build -o=dist main/nmap
-      - run: docker build -o=dist main/pigz
-      - run: docker build -o=dist main/postgresql17
-      - run: docker build -o=dist main/procps-ng
-      - run: docker build -o=dist main/rsync
-      - run: docker build -o=dist main/socat
-      - run: docker build -o=dist main/strace
-      - run: docker build -o=dist main/tcpdump
-      - run: docker build -o=dist main/vim
-      - run: docker build -o=dist main/wget
-      - run: docker build -o=dist custom/mysql57
-      - run: docker build -o=dist custom/mysql80
-      - run: docker build -o=dist custom/mysql84
+      - uses: actions/checkout@v6
+      - name: Set build variables
+        id: set-build-variables
+        run: |
+          BUILDARCH="$(echo ${{ matrix.arch }} | sed 's,arm64,arm64v8,')"
+          export BUILDARCH
+          echo "BUILDARCH=${BUILDARCH}" >> "$GITHUB_ENV"
+          DOCKER_DEFAULT_PLATFORM="linux/$(echo ${{ matrix.arch }} | sed 's,arm32v7,arm/v7,')"
+          export DOCKER_DEFAULT_PLATFORM
+          echo "DOCKER_DEFAULT_PLATFORM=${DOCKER_DEFAULT_PLATFORM}" >> "$GITHUB_ENV"
+      - run: docker build --build-arg BUILDARCH="${BUILDARCH}" --build-arg ALPINE_VERSION="${ALPINE_VERSION}" -o=dist community/fio
+      - run: docker build --build-arg BUILDARCH="${BUILDARCH}" --build-arg ALPINE_VERSION="${ALPINE_VERSION}" -o=dist community/libqrencode
+      - run: docker build --build-arg BUILDARCH="${BUILDARCH}" --build-arg ALPINE_VERSION="${ALPINE_VERSION}" -o=dist community/redis
+      - run: docker build --build-arg BUILDARCH="${BUILDARCH}" --build-arg ALPINE_VERSION="${ALPINE_VERSION}" -o=dist main/7zip
+      - run: docker build --build-arg BUILDARCH="${BUILDARCH}" --build-arg ALPINE_VERSION="${ALPINE_VERSION}" -o=dist main/curl
+      - run: docker build --build-arg BUILDARCH="${BUILDARCH}" --build-arg ALPINE_VERSION="${ALPINE_VERSION}" -o=dist main/htop
+      - run: docker build --build-arg BUILDARCH="${BUILDARCH}" --build-arg ALPINE_VERSION="${ALPINE_VERSION}" -o=dist main/iperf3
+      - run: docker build --build-arg BUILDARCH="${BUILDARCH}" --build-arg ALPINE_VERSION="${ALPINE_VERSION}" -o=dist main/iproute2
+      - run: docker build --build-arg BUILDARCH="${BUILDARCH}" --build-arg ALPINE_VERSION="${ALPINE_VERSION}" -o=dist main/lsof
+      - run: docker build --build-arg BUILDARCH="${BUILDARCH}" --build-arg ALPINE_VERSION="${ALPINE_VERSION}" -o=dist main/mariadb
+      - run: docker build --build-arg BUILDARCH="${BUILDARCH}" --build-arg ALPINE_VERSION="${ALPINE_VERSION}" -o=dist main/nano
+      - run: docker build --build-arg BUILDARCH="${BUILDARCH}" --build-arg ALPINE_VERSION="${ALPINE_VERSION}" -o=dist main/netcat-openbsd
+      - run: docker build --build-arg BUILDARCH="${BUILDARCH}" --build-arg ALPINE_VERSION="${ALPINE_VERSION}" -o=dist main/nmap
+      - run: docker build --build-arg BUILDARCH="${BUILDARCH}" --build-arg ALPINE_VERSION="${ALPINE_VERSION}" -o=dist main/pigz
+      - run: docker build --build-arg BUILDARCH="${BUILDARCH}" --build-arg ALPINE_VERSION="${ALPINE_VERSION}" -o=dist main/postgresql17
+      - run: docker build --build-arg BUILDARCH="${BUILDARCH}" --build-arg ALPINE_VERSION="${ALPINE_VERSION}" -o=dist main/procps-ng
+      - run: docker build --build-arg BUILDARCH="${BUILDARCH}" --build-arg ALPINE_VERSION="${ALPINE_VERSION}" -o=dist main/rsync
+      - run: docker build --build-arg BUILDARCH="${BUILDARCH}" --build-arg ALPINE_VERSION="${ALPINE_VERSION}" -o=dist main/socat
+      - run: docker build --build-arg BUILDARCH="${BUILDARCH}" --build-arg ALPINE_VERSION="${ALPINE_VERSION}" -o=dist main/strace
+      - run: docker build --build-arg BUILDARCH="${BUILDARCH}" --build-arg ALPINE_VERSION="${ALPINE_VERSION}" -o=dist main/tcpdump
+      - run: docker build --build-arg BUILDARCH="${BUILDARCH}" --build-arg ALPINE_VERSION="${ALPINE_VERSION}" -o=dist main/vim
+      - run: docker build --build-arg BUILDARCH="${BUILDARCH}" --build-arg ALPINE_VERSION="${ALPINE_VERSION}" -o=dist main/wget
+      - run: docker build --build-arg BUILDARCH="${BUILDARCH}" --build-arg ALPINE_VERSION="${ALPINE_VERSION}" -o=dist custom/mysql57
+      - run: docker build --build-arg BUILDARCH="${BUILDARCH}" --build-arg ALPINE_VERSION="${ALPINE_VERSION}" -o=dist custom/mysql80
+      - run: docker build --build-arg BUILDARCH="${BUILDARCH}" --build-arg ALPINE_VERSION="${ALPINE_VERSION}" -o=dist custom/mysql84
 
       - run: |
           for file in dist/*; do
-            mv "$file" "${file}_${GITHUB_REF_NAME}_linux_${{ matrix.runner.arch }}"
+            mv "$file" "${file}_${GITHUB_REF_NAME}_linux_${{ matrix.arch }}"
           done
 
       - uses: actions/upload-artifact@v4
         with:
-          name: static-binaries-artifact-${{ matrix.runner.arch }}
+          name: static-binaries-artifact-${{ matrix.arch }}
           path: dist/*
           retention-days: 1
           if-no-files-found: error
