Add i386 and arm32v7 building.
Also update to Alpine 3.23.
Move ALPINE_VERSION to workflow.
Allow workflow_dispatch.
Use a docker pull for the image before steps.
Add -DCMAKE_POLICY_VERSION_MINIMUM=3.5 to mysql57.

Signed-off-by: Satadru Pramanik <satadru@gmail.com>

--- a/custom/mysql57/aports/APKBUILD
+++ b/custom/mysql57/aports/APKBUILD
@@ -29,6 +29,7 @@ build() {
 		-DBUILD_CONFIG=mysql_release \
 		-DCMAKE_BUILD_TYPE=RelWithDebInfo \
 		-DCMAKE_INSTALL_PREFIX=/usr \
+		-DCMAKE_POLICY_VERSION_MINIMUM=3.5 \
 		-DCOMPILATION_COMMENT="Alpine Linux" \
 		-DSYSCONFDIR=/etc/mysql \
 		-DMYSQL_DATADIR=/var/lib/mysql \
