Add i386 and armv7l building.
Also update to Alpine 3.23.
Move ALPINE_VERSION to workflow.
Allow workflow_dispatch.
Use a docker pull for the image before steps.

Signed-off-by: Satadru Pramanik <satadru@gmail.com>

--- a/custom/mysql80/Dockerfile
+++ b/custom/mysql80/Dockerfile
@@ -2,6 +2,7 @@
 # https://docs.docker.com/build/dockerfile/frontend/
 
 ARG ALPINE_VERSION=3.22
+ENV ALPINE_VERSION=${ALPINE_VERSION}
 ARG PACKAGE_PATH=custom/mysql80
 ARG PACKAGE_NAME=mysql80
 ARG PACKAGE_VERSION=8.0.42
@@ -11,7 +12,9 @@ FROM docker.io/library/alpine:${ALPINE_VERSION} AS build
 # redeclare in build stage to inherit arguments from global scope
 # https://docs.docker.com/build/building/variables/#scoping
 ARG BUILDARCH
+ENV BUILDARCH=${BUILDARCH}
 ARG ALPINE_VERSION
+ENV ALPINE_VERSION=${ALPINE_VERSION}
 ARG PACKAGE_PATH
 ARG PACKAGE_NAME
 ARG PACKAGE_VERSION
