--- a/main/7zip/Dockerfile
+++ b/main/7zip/Dockerfile
@@ -1,17 +1,22 @@
 # syntax=docker.io/docker/dockerfile:1.16
 # https://docs.docker.com/build/dockerfile/frontend/
 
-ARG ALPINE_VERSION=3.22
+ARG BUILDARCH
+ENV BUILDARCH=${BUILDARCH}
+ARG ALPINE_VERSION
+ENV ALPINE_VERSION=${ALPINE_VERSION}
 ARG PACKAGE_PATH=main/7zip
 ARG PACKAGE_NAME=7zip
 ARG PACKAGE_VERSION=24.09
 
-FROM docker.io/library/alpine:${ALPINE_VERSION} AS build
+FROM ${BUILDARCH}/alpine:${ALPINE_VERSION} AS build
 
 # redeclare in build stage to inherit arguments from global scope
 # https://docs.docker.com/build/building/variables/#scoping
 ARG BUILDARCH
+ENV BUILDARCH=${BUILDARCH}
 ARG ALPINE_VERSION
+ENV ALPINE_VERSION=${ALPINE_VERSION}
 ARG PACKAGE_PATH
 ARG PACKAGE_NAME
 ARG PACKAGE_VERSION
@@ -45,7 +50,7 @@ EOT
 RUN --mount=type=cache,target=/var/cache/apk,id=apk-$BUILDARCH,sharing=locked \
   cd "${PACKAGE_PATH}" && apk del ${EXTRA_DEPS} && abuild -F undeps && \
   "/src/${PACKAGE_PATH}/pkg/${PACKAGE_NAME}/usr/bin/7zz" --help && \
-  file "/src/${PACKAGE_PATH}/pkg/${PACKAGE_NAME}/usr/bin/7zz" | grep -q 'statically linked' && \
+  file "/src/${PACKAGE_PATH}/pkg/${PACKAGE_NAME}/usr/bin/7zz" | grep -q 'static-pie linked\|statically linked' && \
   strip "/src/${PACKAGE_PATH}/pkg/${PACKAGE_NAME}/usr/bin/7zz" -o /usr/local/bin/7z
 
 # STEP-4: export executable
