--- a/main/7zip/Dockerfile
+++ b/main/7zip/Dockerfile
@@ -2,7 +2,7 @@
 # https://docs.docker.com/build/dockerfile/frontend/
 
 ARG BUILDARCH
-ARG ALPINE_VERSION=3.23
+ARG ALPINE_VERSION
 ARG PACKAGE_PATH=main/7zip
 ARG PACKAGE_NAME=7zip
 ARG PACKAGE_VERSION=24.09
