--- a/main/iproute2/Dockerfile
+++ b/main/iproute2/Dockerfile
@@ -2,7 +2,7 @@
 # https://docs.docker.com/build/dockerfile/frontend/
 
 ARG BUILDARCH
-ARG ALPINE_VERSION=3.23
+ARG ALPINE_VERSION
 ARG PACKAGE_PATH=main/iproute2
 ARG PACKAGE_NAME=iproute2
 ARG PACKAGE_VERSION=6.15.0
