--- a/main/nano/Dockerfile
+++ b/main/nano/Dockerfile
@@ -2,7 +2,7 @@
 # https://docs.docker.com/build/dockerfile/frontend/
 
 ARG BUILDARCH
-ARG ALPINE_VERSION=3.23
+ARG ALPINE_VERSION
 ARG PACKAGE_PATH=main/nano
 ARG PACKAGE_NAME=nano
 ARG PACKAGE_VERSION=8.4
