--- a/main/pigz/Dockerfile
+++ b/main/pigz/Dockerfile
@@ -2,7 +2,7 @@
 # https://docs.docker.com/build/dockerfile/frontend/
 
 ARG BUILDARCH
-ARG ALPINE_VERSION=3.23
+ARG ALPINE_VERSION
 ARG PACKAGE_PATH=main/pigz
 ARG PACKAGE_NAME=pigz
 ARG PACKAGE_VERSION=2.8
