--- a/main/procps-ng/Dockerfile
+++ b/main/procps-ng/Dockerfile
@@ -2,7 +2,7 @@
 # https://docs.docker.com/build/dockerfile/frontend/
 
 ARG BUILDARCH
-ARG ALPINE_VERSION=3.23
+ARG ALPINE_VERSION
 ARG PACKAGE_PATH=main/procps-ng
 ARG PACKAGE_NAME=procps-ng
 ARG PACKAGE_VERSION=4.0.4
