--- a/main/rsync/Dockerfile
+++ b/main/rsync/Dockerfile
@@ -2,7 +2,7 @@
 # https://docs.docker.com/build/dockerfile/frontend/
 
 ARG BUILDARCH
-ARG ALPINE_VERSION=3.23
+ARG ALPINE_VERSION
 ARG PACKAGE_PATH=main/rsync
 ARG PACKAGE_NAME=rsync
 ARG PACKAGE_VERSION=3.4.1
