--- a/main/socat/Dockerfile
+++ b/main/socat/Dockerfile
@@ -2,7 +2,7 @@
 # https://docs.docker.com/build/dockerfile/frontend/
 
 ARG BUILDARCH
-ARG ALPINE_VERSION=3.23
+ARG ALPINE_VERSION
 ARG PACKAGE_PATH=main/socat
 ARG PACKAGE_NAME=socat
 ARG PACKAGE_VERSION=1.8.0.3
